--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "@types/node": "11.13.0",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
+    "apollo-boost": "^0.3.1",
+    "graphql": "^14.2.1",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.3",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "typescript": "3.4.1"
